--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     }
     body {
-    background-image: url("wallpaperflare.com_wallpaper\ \(3\).jpg");
+    background-image: url("breathtaking-view-islamic-palace-interior-adorned-golden-arches-intricate-patterns-elegant-columns-luxurious-339596874.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position:top;
